trunk/examples/languages/PIR/imcc.output
Warnings:
---------
Unused terminals:

	ADV_INVOCANT, declared line 21
	INC, declared line 24
	DOTDOT, declared line 32
	SYM, declared line 23
	DOT_METHOD, declared line 22
	DEC, declared line 24
	ENDM, declared line 41
	NEW, declared line 21

1 shift/reduce conflict 
Conflicts:
----------
Conflict in state 121 between rule 45 and token '\n' resolved as shift.
State 345 contains 1 shift/reduce conflict

Rules:
------
0:	$start -> program $end
1:	program -> compilation_units
2:	compilation_units -> compilation_unit
3:	compilation_units -> compilation_units compilation_unit
4:	compilation_unit -> class_namespace
5:	compilation_unit -> constdef
6:	compilation_unit -> sub
7:	compilation_unit -> emit
8:	compilation_unit -> MACRO '\n'
9:	compilation_unit -> pragma
10:	compilation_unit -> location_directive
11:	compilation_unit -> '\n'
12:	pragma -> hll_def '\n'
13:	pragma -> LOADLIB STRINGC '\n'
14:	location_directive -> TK_LINE INTC COMMA STRINGC '\n'
15:	location_directive -> TK_FILE STRINGC '\n'
16:	annotate_directive -> ANNOTATE STRINGC COMMA const
17:	hll_def -> HLL STRINGC
18:	constdef -> CONST type IDENTIFIER '=' const
19:	pmc_const -> CONST INTC var_or_i '=' any_string
20:	pmc_const -> CONST STRINGC var_or_i '=' any_string
21:	any_string -> STRINGC
22:	any_string -> USTRINGC
23:	pasmcode -> pasmline
24:	pasmcode -> pasmcode pasmline
25:	pasmline -> labels pasm_inst '\n'
26:	pasmline -> MACRO '\n'
27:	pasmline -> FILECOMMENT
28:	pasmline -> LINECOMMENT
29:	pasmline -> class_namespace
30:	pasmline -> pmc_const
31:	pasmline -> pragma
32:	pasm_inst -> PARROT_OP pasm_args
33:	pasm_inst -> PCC_SUB sub_proto LABEL
34:	pasm_inst -> PNULL var
35:	pasm_inst -> LEXICAL STRINGC COMMA REG
36:	pasm_inst -> /* empty */
37:	pasm_args -> vars
38:	emit -> EMIT opt_pasmcode EOM
39:	opt_pasmcode -> /* empty */
40:	opt_pasmcode -> pasmcode
41:	class_namespace -> NAMESPACE maybe_ns '\n'
42:	maybe_ns -> '[' keylist ']'
43:	maybe_ns -> '[' ']'
44:	sub -> SUB sub_label_op_c sub_proto '\n' sub_params sub_body ESUB
45:	sub_params -> /* empty */
46:	sub_params -> '\n'
47:	sub_params -> sub_params sub_param '\n'
48:	sub_param -> PARAM sub_param_type_def
49:	sub_param_type_def -> type IDENTIFIER paramtype_list
50:	multi -> MULTI '(' multi_types ')'
51:	outer -> OUTER '(' STRINGC ')'
52:	outer -> OUTER '(' IDENTIFIER ')'
53:	vtable -> VTABLE_METHOD
54:	vtable -> VTABLE_METHOD '(' STRINGC ')'
55:	method -> METHOD
56:	method -> METHOD '(' any_string ')'
57:	ns_entry_name -> NS_ENTRY
58:	ns_entry_name -> NS_ENTRY '(' any_string ')'
59:	instanceof -> SUB_INSTANCE_OF '(' STRINGC ')'
60:	subid -> SUBID
61:	subid -> SUBID '(' any_string ')'
62:	multi_types -> /* empty */
63:	multi_types -> multi_types COMMA multi_type
64:	multi_types -> multi_type
65:	multi_type -> INTV
66:	multi_type -> FLOATV
67:	multi_type -> PMCV
68:	multi_type -> STRINGV
69:	multi_type -> IDENTIFIER
70:	multi_type -> STRINGC
71:	multi_type -> '[' keylist ']'
72:	sub_body -> /* empty */
73:	sub_body -> statements
74:	pcc_sub_call -> PCC_BEGIN '\n' pcc_args opt_invocant pcc_call opt_label pcc_results PCC_END
75:	opt_label -> /* empty */
76:	opt_label -> label '\n'
77:	opt_invocant -> /* empty */
78:	opt_invocant -> INVOCANT var '\n'
79:	sub_proto -> /* empty */
80:	sub_proto -> sub_proto_list
81:	sub_proto_list -> proto
82:	sub_proto_list -> sub_proto_list proto
83:	proto -> LOAD
84:	proto -> INIT
85:	proto -> MAIN
86:	proto -> IMMEDIATE
87:	proto -> POSTCOMP
88:	proto -> ANON
89:	proto -> NEED_LEX
90:	proto -> multi
91:	proto -> outer
92:	proto -> vtable
93:	proto -> method
94:	proto -> ns_entry_name
95:	proto -> instanceof
96:	proto -> subid
97:	pcc_call -> PCC_CALL var COMMA var '\n'
98:	pcc_call -> PCC_CALL var '\n'
99:	pcc_call -> NCI_CALL var '\n'
100:	pcc_call -> METH_CALL target '\n'
101:	pcc_call -> METH_CALL STRINGC '\n'
102:	pcc_call -> METH_CALL target COMMA var '\n'
103:	pcc_call -> METH_CALL STRINGC COMMA var '\n'
104:	pcc_args -> /* empty */
105:	pcc_args -> pcc_args pcc_arg '\n'
106:	pcc_arg -> ARG arg
107:	pcc_results -> /* empty */
108:	pcc_results -> pcc_results pcc_result '\n'
109:	pcc_result -> RESULT target paramtype_list
110:	pcc_result -> LOCAL type id_list_id
111:	paramtype_list -> /* empty */
112:	paramtype_list -> paramtype_list paramtype
113:	paramtype -> ADV_SLURPY
114:	paramtype -> ADV_OPTIONAL
115:	paramtype -> ADV_OPT_FLAG
116:	paramtype -> ADV_NAMED
117:	paramtype -> ADV_NAMED '(' STRINGC ')'
118:	paramtype -> ADV_NAMED '(' USTRINGC ')'
119:	paramtype -> UNIQUE_REG
120:	paramtype -> ADV_CALL_SIG
121:	pcc_ret -> PCC_BEGIN_RETURN '\n' pcc_returns PCC_END_RETURN
122:	pcc_ret -> pcc_return_many
123:	pcc_yield -> PCC_BEGIN_YIELD '\n' pcc_yields PCC_END_YIELD
124:	pcc_returns -> /* empty */
125:	pcc_returns -> pcc_returns '\n'
126:	pcc_returns -> pcc_returns pcc_return '\n'
127:	pcc_yields -> /* empty */
128:	pcc_yields -> pcc_yields '\n'
129:	pcc_yields -> pcc_yields pcc_set_yield '\n'
130:	pcc_return -> SET_RETURN var argtype_list
131:	pcc_set_yield -> SET_YIELD var argtype_list
132:	pcc_return_many -> return_or_yield '(' var_returns ')'
133:	return_or_yield -> RETURN
134:	return_or_yield -> YIELDT
135:	var_returns -> /* empty */
136:	var_returns -> arg
137:	var_returns -> STRINGC ADV_ARROW var
138:	var_returns -> var_returns COMMA arg
139:	var_returns -> var_returns COMMA STRINGC ADV_ARROW var
140:	statements -> statement
141:	statements -> statements statement
142:	helper_clear_state -> /* empty */
143:	statement -> helper_clear_state instruction
144:	statement -> MACRO '\n'
145:	statement -> FILECOMMENT
146:	statement -> LINECOMMENT
147:	statement -> location_directive
148:	statement -> annotate_directive
149:	labels -> /* empty */
150:	labels -> _labels
151:	_labels -> _labels label
152:	_labels -> label
153:	label -> LABEL
154:	instruction -> labels labeled_inst '\n'
155:	instruction -> error '\n'
156:	id_list -> id_list_id
157:	id_list -> id_list COMMA id_list_id
158:	id_list_id -> IDENTIFIER opt_unique_reg
159:	opt_unique_reg -> /* empty */
160:	opt_unique_reg -> UNIQUE_REG
161:	labeled_inst -> assignment
162:	labeled_inst -> conditional_statement
163:	labeled_inst -> LOCAL type id_list
164:	labeled_inst -> LEXICAL STRINGC COMMA target
165:	labeled_inst -> LEXICAL USTRINGC COMMA target
166:	labeled_inst -> CONST type IDENTIFIER '=' const
167:	labeled_inst -> pmc_const
168:	labeled_inst -> GLOBAL_CONST type IDENTIFIER '=' const
169:	labeled_inst -> TAILCALL sub_call
170:	labeled_inst -> GOTO label_op
171:	labeled_inst -> PARROT_OP vars
172:	labeled_inst -> PNULL var
173:	labeled_inst -> sub_call
174:	labeled_inst -> pcc_sub_call
175:	labeled_inst -> pcc_ret
176:	labeled_inst -> pcc_yield
177:	labeled_inst -> /* empty */
178:	type -> INTV
179:	type -> FLOATV
180:	type -> STRINGV
181:	type -> PMCV
182:	classname -> IDENTIFIER
183:	assignment -> target '=' var
184:	assignment -> target '=' un_op var
185:	assignment -> target '=' var bin_op var
186:	assignment -> target '=' var '[' keylist ']'
187:	assignment -> target '[' keylist ']' '=' var
188:	assignment -> target '=' 'new' classname '[' keylist ']'
189:	assignment -> target '=' sub_call
190:	assignment -> '(' targetlist ')' '=' the_sub '(' arglist ')'
191:	assignment -> get_results
192:	assignment -> op_assign
193:	assignment -> func_assign
194:	assignment -> target '=' PNULL
195:	un_op -> '!'
196:	un_op -> '~'
197:	un_op -> '-'
198:	bin_op -> '-'
199:	bin_op -> '+'
200:	bin_op -> '*'
201:	bin_op -> '/'
202:	bin_op -> '%'
203:	bin_op -> FDIV
204:	bin_op -> POW
205:	bin_op -> CONCAT
206:	bin_op -> RELOP_EQ
207:	bin_op -> RELOP_NE
208:	bin_op -> RELOP_GT
209:	bin_op -> RELOP_GTE
210:	bin_op -> RELOP_LT
211:	bin_op -> RELOP_LTE
212:	bin_op -> SHIFT_LEFT
213:	bin_op -> SHIFT_RIGHT
214:	bin_op -> SHIFT_RIGHT_U
215:	bin_op -> LOG_AND
216:	bin_op -> LOG_OR
217:	bin_op -> LOG_XOR
218:	bin_op -> '&'
219:	bin_op -> '|'
220:	bin_op -> '~'
221:	get_results -> GET_RESULTS '(' targetlist ')'
222:	op_assign -> target assign_op var
223:	assign_op -> PLUS_ASSIGN
224:	assign_op -> MINUS_ASSIGN
225:	assign_op -> MUL_ASSIGN
226:	assign_op -> DIV_ASSIGN
227:	assign_op -> MOD_ASSIGN
228:	assign_op -> FDIV_ASSIGN
229:	assign_op -> CONCAT_ASSIGN
230:	assign_op -> BAND_ASSIGN
231:	assign_op -> BOR_ASSIGN
232:	assign_op -> BXOR_ASSIGN
233:	assign_op -> SHR_ASSIGN
234:	assign_op -> SHL_ASSIGN
235:	assign_op -> SHR_U_ASSIGN
236:	func_assign -> target '=' PARROT_OP pasm_args
237:	the_sub -> IDENTIFIER
238:	the_sub -> STRINGC
239:	the_sub -> USTRINGC
240:	the_sub -> target
241:	the_sub -> target DOT sub_label_op
242:	the_sub -> target DOT USTRINGC
243:	the_sub -> target DOT STRINGC
244:	the_sub -> target DOT target
245:	sub_call -> the_sub '(' arglist ')'
246:	arglist -> /* empty */
247:	arglist -> arglist COMMA arg
248:	arglist -> arg
249:	arglist -> arglist COMMA STRINGC ADV_ARROW var
250:	arglist -> var ADV_ARROW var
251:	arglist -> STRINGC ADV_ARROW var
252:	arg -> var argtype_list
253:	argtype_list -> /* empty */
254:	argtype_list -> argtype_list argtype
255:	argtype -> ADV_FLAT
256:	argtype -> ADV_NAMED
257:	argtype -> ADV_CALL_SIG
258:	argtype -> ADV_NAMED '(' USTRINGC ')'
259:	argtype -> ADV_NAMED '(' STRINGC ')'
260:	result -> target paramtype_list
261:	targetlist -> targetlist COMMA result
262:	targetlist -> targetlist COMMA STRINGC ADV_ARROW target
263:	targetlist -> result
264:	targetlist -> STRINGC ADV_ARROW target
265:	targetlist -> /* empty */
266:	conditional_statement -> if_statement
267:	conditional_statement -> unless_statement
268:	unless_statement -> UNLESS var relop var GOTO label_op
269:	unless_statement -> UNLESS PNULL var GOTO label_op
270:	unless_statement -> UNLESS var comma_or_goto label_op
271:	if_statement -> IF var comma_or_goto label_op
272:	if_statement -> IF var relop var GOTO label_op
273:	if_statement -> IF PNULL var GOTO label_op
274:	comma_or_goto -> COMMA
275:	comma_or_goto -> GOTO
276:	relop -> RELOP_EQ
277:	relop -> RELOP_NE
278:	relop -> RELOP_GT
279:	relop -> RELOP_GTE
280:	relop -> RELOP_LT
281:	relop -> RELOP_LTE
282:	target -> VAR
283:	target -> reg
284:	vars -> /* empty */
285:	vars -> _vars
286:	_vars -> _vars COMMA _var_or_i
287:	_vars -> _var_or_i
288:	_var_or_i -> var_or_i
289:	_var_or_i -> target '[' keylist ']'
290:	_var_or_i -> '[' keylist_force ']'
291:	sub_label_op_c -> sub_label_op
292:	sub_label_op_c -> STRINGC
293:	sub_label_op_c -> USTRINGC
294:	sub_label_op -> IDENTIFIER
295:	sub_label_op -> PARROT_OP
296:	label_op -> IDENTIFIER
297:	label_op -> PARROT_OP
298:	var_or_i -> label_op
299:	var_or_i -> var
300:	var -> target
301:	var -> const
302:	keylist -> _keylist
303:	keylist_force -> _keylist
304:	_keylist -> key
305:	_keylist -> _keylist ';' key
306:	key -> var
307:	reg -> IREG
308:	reg -> NREG
309:	reg -> SREG
310:	reg -> PREG
311:	reg -> REG
312:	const -> INTC
313:	const -> FLOATC
314:	const -> STRINGC
315:	const -> USTRINGC

States:
-------
State 0:

	$start -> . program $end	(Rule 0)

	'\n'	shift, and go to state 12
	CONST	shift, and go to state 14
	EMIT	shift, and go to state 15
	HLL	shift, and go to state 10
	LOADLIB	shift, and go to state 18
	MACRO	shift, and go to state 17
	NAMESPACE	shift, and go to state 1
	SUB	shift, and go to state 11
	TK_FILE	shift, and go to state 2
	TK_LINE	shift, and go to state 3

	compilation_unit	go to state 13
	location_directive	go to state 4
	program	go to state 6
	emit	go to state 5
	hll_def	go to state 7
	constdef	go to state 8
	pragma	go to state 9
	sub	go to state 16
	compilation_units	go to state 19
	class_namespace	go to state 20

State 1:

	class_namespace -> NAMESPACE . maybe_ns '\n'	(Rule 41)

	'['	shift, and go to state 22

	maybe_ns	go to state 21

State 2:

	location_directive -> TK_FILE . STRINGC '\n'	(Rule 15)

	STRINGC	shift, and go to state 23

State 3:

	location_directive -> TK_LINE . INTC COMMA STRINGC '\n'	(Rule 14)

	INTC	shift, and go to state 24

State 4:

	compilation_unit -> location_directive .	(Rule 10)

	$default	reduce using rule 10 (compilation_unit)

State 5:

	compilation_unit -> emit .	(Rule 7)

	$default	reduce using rule 7 (compilation_unit)

State 6:

	$start -> program . $end	(Rule 0)

	$end	shift, and go to state 25

State 7:

	pragma -> hll_def . '\n'	(Rule 12)

	'\n'	shift, and go to state 26

State 8:

	compilation_unit -> constdef .	(Rule 5)

	$default	reduce using rule 5 (compilation_unit)

State 9:

	compilation_unit -> pragma .	(Rule 9)

	$default	reduce using rule 9 (compilation_unit)

State 10:

	hll_def -> HLL . STRINGC	(Rule 17)

	STRINGC	shift, and go to state 27

State 11:

	sub -> SUB . sub_label_op_c sub_proto '\n' sub_params sub_body ESUB	(Rule 44)

	IDENTIFIER	shift, and go to state 30
	PARROT_OP	shift, and go to state 33
	STRINGC	shift, and go to state 28
	USTRINGC	shift, and go to state 29

	sub_label_op	go to state 31
	sub_label_op_c	go to state 32

State 12:

	compilation_unit -> '\n' .	(Rule 11)

	$default	reduce using rule 11 (compilation_unit)

State 13:

	compilation_units -> compilation_unit .	(Rule 2)

	$default	reduce using rule 2 (compilation_units)

State 14:

	constdef -> CONST . type IDENTIFIER '=' const	(Rule 18)

	FLOATV	shift, and go to state 35
	INTV	shift, and go to state 36
	PMCV	shift, and go to state 38
	STRINGV	shift, and go to state 34

	type	go to state 37

State 15:

	emit -> EMIT . opt_pasmcode EOM	(Rule 38)

	CONST	shift, and go to state 48
	FILECOMMENT	shift, and go to state 40
	HLL	shift, and go to state 10
	LABEL	shift, and go to state 41
	LINECOMMENT	shift, and go to state 44
	LOADLIB	shift, and go to state 18
	MACRO	shift, and go to state 49
	NAMESPACE	shift, and go to state 1

	EOM	reduce using rule 39 (opt_pasmcode)
	$default	reduce using rule 149 (labels)

	pmc_const	go to state 39
	pasmcode	go to state 47
	opt_pasmcode	go to state 43
	_labels	go to state 42
	hll_def	go to state 7
	pragma	go to state 45
	label	go to state 50
	labels	go to state 46
	pasmline	go to state 51
	class_namespace	go to state 52

State 16:

	compilation_unit -> sub .	(Rule 6)

	$default	reduce using rule 6 (compilation_unit)

State 17:

	compilation_unit -> MACRO . '\n'	(Rule 8)

	'\n'	shift, and go to state 53

State 18:

	pragma -> LOADLIB . STRINGC '\n'	(Rule 13)

	STRINGC	shift, and go to state 54

State 19:

	program -> compilation_units .	(Rule 1)
	compilation_units -> compilation_units . compilation_unit	(Rule 3)
